# kstonekuan.github.io

./: .gitignore  CNAME  Cargo.toml  README.md  Trunk.toml  ascii.txt  biome.json  index.html  llms.txt  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts  wrangler.jsonc
.github/workflows/: deploy.yml
assets/: index-0FFqrJyG.css  index-8RDrPKh1.css  index-B02wUu0T.js  index-D9OGi6Yl.js  index-DL0Hw9z5.css  index-Dv_iHtBt.js  index-adclvslq.js
assets/css/: main.css
assets/js/: main.js
src/: App.tsx  app.rs  index.css  main.rs  main.tsx  vite-env.d.ts
src/components/: AsciiArtCard.tsx  ascii_art_card.rs  dialog.rs  image_with_fallback.rs  mod.rs
src/components/figma/: ImageWithFallback.tsx
src/components/ui/: accordion.tsx  badge.tsx  breadcrumb.tsx  button.tsx  calendar.tsx  carousel.tsx  chart.tsx  checkbox.tsx  context-menu.tsx  dialog.tsx  drawer.tsx  dropdown-menu.tsx  form.tsx  input-otp.tsx  menubar.tsx  navigation-menu.tsx  pagination.tsx  radio-group.tsx  resizable.tsx  select.tsx  sheet.tsx  sidebar.tsx  slider.tsx  sonner.tsx  tabs.tsx  toggle-group.tsx  toggle.tsx
src/styles/: globals.css
src/utils/: loadAsciiArt.ts
